--- a/runtime/testnet/Cargo.toml
+++ b/runtime/testnet/Cargo.toml
@@ -36,9 +36,6 @@ polkadot-sdk = { git="https://github.com/paritytech/polkadot-sdk", branch="relea
 # shared code between runtime and node
 node-primitives = { path = "../../node/primitives", default-features = false }
 
-# Example pallets that are not published:
-pallet-example-mbm = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0", default-features = false }
-pallet-example-tasks = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0", default-features = false }
 pallet-balances = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0", default-features = false, features = ["insecure_zero_ed"] }
 
 # Frontier
@@ -70,8 +67,6 @@ std = [
 	"codec/std",
 	"log/std",
 	"node-primitives/std",
-	"pallet-example-mbm/std",
-	"pallet-example-tasks/std",
 	"polkadot-sdk/std",
 	"primitive-types/std",
 	"scale-info/std",
@@ -91,19 +86,25 @@ std = [
 	"pallet-evm-precompile-modexp/std",
 	"pallet-evm-precompile-sha3fips/std",
 	"pallet-evm-precompile-simple/std",
+	"pallet-balances/std",
 ]
 runtime-benchmarks = [
-	"pallet-example-mbm/runtime-benchmarks",
-	"pallet-example-tasks/runtime-benchmarks",
 	"polkadot-sdk/runtime-benchmarks",
+	"pallet-balances/runtime-benchmarks",
 ]
 try-runtime = [
-	"pallet-example-mbm/try-runtime",
-	"pallet-example-tasks/try-runtime",
 	"polkadot-sdk/try-runtime",
-]
-experimental = [
-	"pallet-example-tasks/experimental",
+	"pallet-balances/try-runtime",
+	# Frontier FRAME
+	"pallet-base-fee/try-runtime",
+	"pallet-dynamic-fee/try-runtime",
+	"pallet-ethereum/try-runtime",
+	"pallet-evm/try-runtime",
+	"pallet-evm-chain-id/try-runtime",
+	#
+	"fp-self-contained/try-runtime",
+	
+
 ]
 
 metadata-hash = ["substrate-wasm-builder/metadata-hash"]
