--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,6 +77,8 @@ fc-rpc-v2-types = { git="https://github.com/ChainSupport/frontier.git", branch="
 fc-storage = { git="https://github.com/ChainSupport/frontier.git", branch="release-polkadot-v1.13.0" }
 #
 babe-consensus-data-provider = {git = "https://github.com/ChainSupport/frontier-pos-template.git", branch = "release-polkadot-v1.13.0"}
+ecdsa-keyring = {git = "https://github.com/ChainSupport/frontier-pos-template.git", branch = "release-polkadot-v1.13.0"}
+
 # Frontier Primitive
 fp-account = { git="https://github.com/ChainSupport/frontier.git", branch="release-polkadot-v1.13.0", default-features = false }
 fp-consensus = { git="https://github.com/ChainSupport/frontier.git", branch="release-polkadot-v1.13.0", default-features = false }
