--- a/devnet-docker-compose.yml
+++ b/devnet-docker-compose.yml
@@ -19,7 +19,8 @@ services:
   alice:
     image: wjyask/tscs-node:latest
     entrypoint: ["/usr/local/bin/scs", "--database", "auto", "--chain", "dev"]
-    command: ["--pruning", "archive", "--base-path", "/data", "--alice", "--rpc-max-connections", "100", "--rpc-cors", "all", "--rpc-methods", "Unsafe", "--unsafe-rpc-external"]
+    # command: ["--pruning", "archive", "--base-path", "/data", "--alice", "--rpc-max-connections", "100", "--rpc-cors", "all", "--rpc-methods", "Unsafe", "--unsafe-rpc-external"]
+    command: ["--pruning", "archive", "--base-path", "/data", "--alice", "--rpc-max-connections", "100", "--rpc-cors", "all", "--rpc-methods", "Unsafe", "--rpc-external"]
     volumes:
       - ./db/alice:/data 
     ports:
@@ -35,7 +36,8 @@ services:
   bob:
     image: wjyask/tscs-node:latest
     entrypoint: ["/usr/local/bin/scs", "--database", "auto", "--chain", "dev"]
-    command: ["--pruning", "archive", "--base-path", "/data", "--bob", "--rpc-max-connections", "100", "--rpc-cors", "all", "--rpc-methods", "Unsafe", "--unsafe-rpc-external"]
+    # command: ["--pruning", "archive", "--base-path", "/data", "--bob", "--rpc-max-connections", "100", "--rpc-cors", "all", "--rpc-methods", "Unsafe", "--unsafe-rpc-external"]
+    command: ["--pruning", "archive", "--base-path", "/data", "--bob", "--rpc-max-connections", "100", "--rpc-cors", "all", "--rpc-methods", "Unsafe", "--rpc-external"]
     volumes:
       - ./db/bob:/data 
     ports:
