--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -59,7 +59,7 @@ kitchensink-testnet-runtime = { path = "../../runtime/testnet", optional = true 
 common-runtime = {path = "../../runtime/common"}
 
 
-node-rpc = { path = "../rpc" }
+node-rpc = { path = "../rpc", features = ["txpool"] }
 node-primitives = { path = "../primitives" }
 node-inspect = { package = "staging-node-inspect", path = "../inspect", optional = true }
 
@@ -117,7 +117,7 @@ node-inspect = { package = "staging-node-inspect", path = "../inspect", optional
 polkadot-sdk = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0", features = ["frame-benchmarking-cli", "sc-cli", "sc-storage-monitor", "substrate-build-script-utils"], optional = true }
 
 [features]
-default = ["cli"]
+default = ["cli", "txpool"]
 cli = [
 	"clap",
 	"clap_complete",
@@ -127,7 +127,8 @@ cli = [
 
 tscs = ["kitchensink-testnet-runtime"]
 scs = ["kitchensink-mainnet-runtime"]
-# dscs = ["kitchensink-devnet-runtime"]
+
+txpool = ["node-rpc/txpool"]
 
 runtime-benchmarks = [
 	"kitchensink-mainnet-runtime/runtime-benchmarks",
