--- a/node/rpc/Cargo.toml
+++ b/node/rpc/Cargo.toml
@@ -26,7 +26,7 @@ fc-api = { workspace = true}
 fc-mapping-sync = { workspace = true}
 fc-storage = { workspace = true}
 fc-rpc-core = { workspace = true}
-fc-rpc = { workspace = true}
+fc-rpc = { workspace = true, features = ["txpool"] }
 
 sc-network = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
 sp-core = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
@@ -64,3 +64,7 @@ substrate-frame-rpc-system = { git="https://github.com/paritytech/polkadot-sdk",
 substrate-state-trie-migration-rpc = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
 
 babe-consensus-data-provider = { workspace = true }
+
+[features]
+default = []
+txpool = ["fc-rpc/txpool"]
